--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  epubx: ^3.0.0
+  epub_parser: ^3.0.0
   equatable: ^2.0.3
   html: ^0.15.0
   flutter_html: ^3.0.0-alpha.3
