--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: epub_view_enhanced
 description: Flutter widget for view EPUB documents on on Web, MacOs, Android and iOS. Based on dart-epub package.
 repository: https://github.com/akmittal006/packages.flutter/tree/main/packages/epub_view
 issue_tracker: https://github.com/akmittal006/packages.flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+epub_view%22
-version: 1.5.0
+version: 1.6.0
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -14,10 +14,11 @@ dependencies:
   epub_parser: ^3.0.0
   equatable: ^2.0.3
   html: ^0.15.0
-  flutter_html: ^3.0.0-alpha.3
+  flutter_html: ^2.2.1
   scrollable_positioned_list: ^0.3.2
   collection: ^1.16.0
   universal_file: ^1.0.0
+  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
